Bug 1008360: Move LayerSorter.cpp's xterm color codes into the block where they're used, and comment out the ones that aren't used at all. r=kats